@@ -15,6 +15,7 @@ next
 -added blast2go component
 -fixed multiple bugs to the p_func component
 -added bsml2interevidence_fasta component
+-bugfixes to lipop component
 
 ergatis-v2r10b1
 ---------------
